@@ -377,7 +377,8 @@ def baz():
       "print(\"%(language)s has %(number)03d quote types.\" %
        {'language': \"Python\", \"number\": 2})"
     (let ((oldbuf (current-buffer))
-	  (py-split-window-on-execute t))
+	  (py-split-window-on-execute t)
+	  (py-split-window-on-execute-threshold 3))
       (py-shell)
       (set-buffer oldbuf)
       (switch-to-buffer (current-buffer))
@@ -388,7 +389,7 @@ def baz():
       (switch-to-buffer (current-buffer))
       (split-window-horizontally)
       (py-execute-statement)
-      (should (eq 4 (length (window-list)))))))
+      (should (eq 3 (length (window-list)))))))
 
 (provide 'py-ert-interactive-tests)
 ;;; py-ert-interactive-tests.el ends here
